# my_agent

./: Cargo.toml  config.toml
src/: config.rs  first_agent.rs  main.rs  warmup_ollama.rs
